# bootcamp

./: .gitignore  README.md  main.py  pyproject.toml
Setup_test/Folder_Automation/: creator_scraped.py  destination_map.json  folderstructure.py  transfer_all_sections.py  transfer_section_1.py  transfer_selected_sections.py
Setup_test/Python_Docker_Test/: hello_world.py
Setup_test/sample_data/unprocessed/: sample_log_0.txt  sample_log_1.txt  sample_log_2.txt  sample_log_3.txt  sample_log_4.txt
basics/ex-basics-1/: pyproject.toml
basics/ex-basics-2/: pyproject.toml
dataflow-framework/abstraction-level-2/: README.md  pipeline.py
dataflow-framework/abstraction-level-3/: README.md  main.py  pipeline.py
dataflow-framework/abstraction-level-3/processors/: upper.py
dataflow-framework/abstraction-level-4/: README.md  pyproject.toml  typesp.py
dataflow-framework/abstraction-level-5/: README.md  pyproject.toml
dataflow-framework/abstraction-level-7/: pyproject.toml
day_four/: main.py  pyproject.toml
day_four/final_project_wrapup_realtime_file_processing_system/: README.md
day_four/level_0_basic_script/: README.md  process.py
day_four/level_1_parameters_and_cli_interface/: README.md  process.py
day_four/level_2_modular_structure_and_standardized_processing/: README.md  cli.py  core.py  pyproject.toml
day_four/level_3_dynamic_config_driven_pipeline/: cli.py  core.py  pipeline.yaml  processor_types.py  pyproject.toml
day_four/level_3_dynamic_config_driven_pipeline/processors/: snake.py
day_four/level_3_ynamic_config_driven_pipeline/: core.py  input.txt  main.py  pipeline.py  pipeline.yaml  process_types.py
day_four/level_3_ynamic_config_driven_pipeline/processors/: snake.py  upper.py
day_four/level_4_stream_processing_and_state/: README.md  cli.py  core.py  input.txt  main.py  pipeline.py  pipeline.yaml  typesp.py
day_four/level_6_statebased_routing_system/: README.md  pyproject.toml
day_four/level_7_observability_and_system_introspection/: README.md
day_four/level_7_observability_and_system_introspection/dashboard/: server.py
day_four/level_8_automated_folder_monitor_and_recovery/: README.md  pyproject.toml
day_one/: README.md  pyproject.toml
day_one/docs/: daily_log.md  index.md  license.md  markdown_cheatsheet.md  mkdocs.yml
day_two/: main.py  pyproject.toml
day_two/section_1_Core_Python_Proficiency/exercise_1_Data_Structures_Lists_Dicts_Sets_Tuples/: exercise_1.4_Dictionary_Access_Get_SetDefault.py  exercise_1.7_Tuple_Unpacking.py
day_two/section_1_Core_Python_Proficiency/exercise_2_Comprehensions_and_Generator_Expressions/: exercise_2.1_List_Comprehension_with_Condition.py  exercise_2.2_Nested_List_Comprehension.py  exercise_2.3_Dict_Comprehension.py  exercise_2.5_Generator_Expression.py  exercise_2.7_Filter_with_Comprehension.py
day_two/section_1_Core_Python_Proficiency/exercise_3_Functions_and_Arguments/: README.md  exercise_3.1_Default_Arguments.py  exercise_3.3_Variable_Positional_Args.py  exercise_3.4_Variable_Keyword_Args.py  exercise_3.5_Mixed_Args.py  exercise_3.7_Keyword_Only_Args.py
day_two/section_1_Core_Python_Proficiency/exercise_4_Scope_and_Closures/: README.md  exercise_4.3_Nonlocal.py  exercise_4.5_Closure_Function.py  exercise_4.7_Name_Shadowing.py  exercise_4.8_Scope_Error.py
day_zero/: README.md  main.py  pyproject.toml
day_zero/anurag_hello/: __init__.py  main.py
doctools/: api_reference.md  changelog.md  cli_commands.md  contributing.md  design_document.md  installation.md  usage.md
doctools/architecture_flow_details/: architecture_diagram.md
doctools/sequence_flow_details/: sequence_diagram.md
figure_extraction/: PMC6267067.xml  README.md  duckdb_sample_data.sql  pubtator_response.json  sample_data.sql  schema.sql
figure_extraction/documents/: figure_extraction_system.md  implementation.md  implementation_and_testing_plan.md  operationalization.md
figure_extraction/tests/: test_api.py
language-drills/section-1/: ex-1_README.md  ex-2_README.md  ex-5_README.md  ex-6_README.md
persistence_drills/: README.md
persistence_drills/database_properties_questions/: database_properties_questions.docx
persistence_drills/file_based/: README.md  requirements.txt
persistence_drills/level_up_drills/: Readme.md
persistence_drills/sqlite_setup_test/: ReadMe.md  example.db  generate_inserts.py
(+292 files in other folders)
