[project]
name = "aganithabootcamp"
version = "0.1.0"
description = "Monorepo for Aganitha Bootcamp"
authors = [{ name = "ANURAG JAMANKAR", email = "anurag.jamankar.aj@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[tool.uv]
python = "3.13"

[tool.uv.workspace]
members = [
    "day_one",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["Day_Zero", "Setup_test"]

[project.scripts]
# Optional: expose submodule CLI at top level
anurag-hello = "Day_Zero.anurag_hello.cli:main"


