[project]
name = "aganithabootcamp"
version = "0.1.0"
description = "Monorepo for Aganitha Bootcamp"
authors = [{ name = "ANURAG JAMANKAR", email = "anurag.jamankar.aj@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[tool.uv.workspace]
members = [
    "day_zero",
    "day_one",
    "day_four",
    "day_two",
    "day_four/level_2_modular_structure_and_standardized_processing",
    "day_four/level_3_ynamic_config_driven_pipeline",
]
