[project]
name = "aganithabootcamp"
version = "0.1.0"
description = "Monorepo for Aganitha Bootcamp"
authors = [{ name = "ANURAG JAMANKAR", email = "anurag.jamankar.aj@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[tool.uv.workspace]
members = [
    "day_zero",
    "day_one",
    "day_four",
    "day_two",
    "day_four/level_2_modular_structure_and_standardized_processing",
    "day_four/level_3_ynamic_config_driven_pipeline",
    "day_four/level_7_observability_and_system_introspection",
    "day_four/level_8_automated_folder_monitor_and_recovery",
    "day_four/final_project_wrapup_realtime_file_processing_system",
    "day_four/level_4_stream_processing_and_state",
    "day_four/level_5_dag_routing_and_conditional_flows",
    "day_four/level_6_statebased_routing_system",
]
