[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anurag-hello"
version = "0.1.0"
authors = [
    {name = "ANURAGJAMANKAR", email = "white.demon.aj@gmail.com"},
]
description = "A simple hello world package"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ANURAGJAMANKAR/anurag-hello"
"Bug Tracker" = "https://github.com/ANURAGJAMANKAR/anurag-hello/issues"