[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anurag-hello"
version = "0.2.0"
authors = [
    {name = "ANURAG JAMANKAR", email = "anurag.jamankar.aj@gmail.com"},
]
description = "This module provides a basic greeting functionality that takes a user's name and returns a personalized message. The output is enhanced using the rich library for better formatting, and the module is converted into a CLI tool using typer, enabling terminal-based interaction."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
anurag-hello = "anurag_hello.cli:main"

[project.urls]
"Homepage" = "https://github.com/ANURAGJAMANKAR/bootcamp/tree/183cdceaf439c47ba52c7e47690e72daab537402/day_zero"